--- a/src/main/resources/assets/martinnico/lang/en_us.json
+++ b/src/main/resources/assets/martinnico/lang/en_us.json
@@ -1,3 +1,8 @@
 {
-  "item.martinnico.beep": "Beep"
+  "item.martinnico.nicodium_pickaxe": "Nicodium Pickaxe",
+  "item.martinnico.nicodium_shovel": "Nicodium Shovel",
+  "item.martinnico.nicodium_sword": "Nicodium Sword",
+  "item.martinnico.beep": "Beep",
+  "item.martinnico.nicodium_axe": "Nicodium Axe",
+  "item.martinnico.nicodium_hoe": "Nicodium Hoe"
 }
