--- a/src/main/resources/assets/martinnico/lang/en_us.json
+++ b/src/main/resources/assets/martinnico/lang/en_us.json
@@ -1,1 +1,6 @@
-{}
+{
+  "item.martinnico.staffofjudgment": "Staffofjudgment",
+  "item.martinnico.junglewhip": "Junglewhip",
+  "item.martinnico.blank": "Blank",
+  "item.martinnico.bloodsickle": "Bloodsickle"
+}
