--- a/src/main/resources/assets/martinnico/lang/en_us.json
+++ b/src/main/resources/assets/martinnico/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "item.martinnico.lifesteal": "Lifesteal",
   "item.martinnico.junglewhip": "Junglewhip",
   "item.martinnico.bloodsickle": "Bloodsickle"
 }
