--- a/src/main/resources/assets/martinnico/lang/en_us.json
+++ b/src/main/resources/assets/martinnico/lang/en_us.json
@@ -1,3 +1,8 @@
 {
+  "item.martinnico.lifesteal": "Lifesteal",
+  "item.martinnico.staffofjudgment": "Staffofjudgment",
+  "item.martinnico.junglewhip": "Junglewhip",
+  "item.martinnico.blank": "Blank",
+  "item.martinnico.bloodsickle": "Bloodsickle",
   "item.martinnico.tree_swinger": "Tree Swinger"
 }
