--- a/src/main/resources/assets/martinnico/lang/en_us.json
+++ b/src/main/resources/assets/martinnico/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.martinnico.lifesteal": "Lifesteal",
   "item.martinnico.staffofjudgment": "Staffofjudgment",
+  "block.martinnico.dark_blue_mushroom_block": "Dark Blue Mushroom Block",
   "item.martinnico.junglewhip": "Junglewhip",
   "item.martinnico.blank": "Blank",
   "item.martinnico.bloodsickle": "Bloodsickle",
