--- a/src/main/resources/assets/martinnico/lang/en_us.json
+++ b/src/main/resources/assets/martinnico/lang/en_us.json
@@ -4,6 +4,7 @@
   "block.martinnico.dark_blue_mushroom_block": "Dark Blue Mushroom Block",
   "item.martinnico.junglewhip": "Junglewhip",
   "item.martinnico.blank": "Blank",
+  "block.martinnico.reinforced_vine": "Reinforced Vine",
   "item.martinnico.bloodsickle": "Bloodsickle",
   "item.martinnico.tree_swinger": "Tree Swinger"
 }
