Biome and grapple Gun setup

--- a/src/main/resources/assets/martinnico/lang/en_us.json
+++ b/src/main/resources/assets/martinnico/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "biome.martinnico.moon_shroom_biome": "Moon Shroom Biome",
   "item.martinnico.lifesteal": "Lifesteal",
   "item.martinnico.staffofjudgment": "Staffofjudgment",
   "block.martinnico.dark_blue_mushroom_block": "Dark Blue Mushroom Block",
